@@ -1,3 +1,6 @@
+2007-10-07  Douglas Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/Calendar.py: various improvements, issue #1157
+
 2007-10-07  Gary Burton <gary.burton@zen.co.uk>
 	* src/DataViews/_RelationView.py: init scroll pos on new person, issue #442
 
